<resources>
    <string name="app_name">Money Mentor</string>


    //login
    <string name="login_correo">Correo electrónico</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_confirmar_pass">Confirmar Contraseña</string>
    <string name="login_inicio">Iniciar Sesión Administrador</string>
    <string name="login_registro">Registrarse</string>
    <string name="login_restablecer_pass">Restablecer contraseña</string>
    <string name="login_inicio_google">Iniciar Sesión Particular</string>
    <string name="login_olvido_pass">He olvidado mi contraseña</string>
    <string name="login_crear_cuenta">Crear Cuenta</string>
    <string name="login_volver">Volver a Inicio de Sesión</string>

    //Mostrar licencias
    <string name="showLicensesTextView">Licencias utilizadas</string>

    //NavigationBar
    <string name="navigation_bottom_info">Cuenta</string>
    <string name="navigation_bottom_rates">Valoraciones</string>
    <string name="navigation_bottom_splitPayment">Dividir pago</string>
    <string name="navigation_bottom_payment">Realizar pago</string>

    //InfoFragment
    <string name="info_no_name">Nombre no disponible</string>
    <string name="update_balance_button">Actualizar saldo</string>
    <string name="scan_qr">Escanear QR</string>

    //ExpensesRegistryFragment
    <string name="add_expense_button">Registrar gasto</string>

    //Dialogs
    <string name="dialog_expenses_amount_edit_text_hint">Importe</string>
    <string name="dialog_expenses_message_edit_text_hint">Concepto</string>
    <string name="dialog_expenses_category_edit_text_hint">Categoría</string>
    <string name="dialog_balance_edit_text_hint">Introduzca su saldo</string>
    <string name="dialog_rate_title">Valora la app</string>
    <string name="dialog_rate_edit_text_hint">Deja una valoración</string>
    <string name="dialog_rate_ok">Valorar</string>
    <string name="dialog_ok">Aceptar</string>
    <string name="dialog_cancel">Cancelar</string>

    //Log out
    <string name="options_menu_log_out">Cerrar sesión</string>

    //PaySpliterFragment
    <string name="perPersonStaticText">Importe por persona</string>
    <string name="billStaticText">Importe total (€)</string>
    <string name="tipStaticText">Propina</string>
    <string name="numberOfPeopleStaticText">Número de personas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
