<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:fillViewport="true"
            tools:context=".activities.LoginActivity">


    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/editTextEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="32dp"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:background="@drawable/edittext_borders"
                android:hint="@string/login_correo"
                android:textSize="@dimen/login_text_size"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"/>
        <EditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginEnd="32dp"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:background="@drawable/edittext_borders"
                android:hint="@string/login_pass"
                android:textSize="@dimen/login_text_size"
                android:inputType="textPassword"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin"
                app:layout_constraintEnd_toEndOf="parent"/>

        <Button android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:text="@string/login_inicio"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/login_text_xl_size"
                android:background="@drawable/button_ripple_background"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="@string/login_olvido_pass"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginTop="170dp"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"
                android:layout_marginStart="48dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="48dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewShowLicenses"/>
        <Button
                android:id="@+id/buttonLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:text="@string/login_inicio_google"
                android:textSize="18dp"
                android:textColor="@color/colorPrimaryText"
                android:background="@drawable/button_ripple_google"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0"/>

        <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_xl_height"
                android:text="@string/login_crear_cuenta"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/login_text_size"
                android:background="@drawable/button_ripple"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/buttonLoginGoogle"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/textViewForgotPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/textViewShowLicenses"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:text="@string/showLicensesTextView"
                android:textColor="@color/colorSecondaryText"
                app:layout_constraintTop_toBottomOf="@+id/textViewForgotPassword"
                android:layout_marginStart="48dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="48dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                android:layout_marginBottom="60dp" app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>