<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:fillViewport="true"
            tools:context=".activities.LoginActivity">


    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:id="@+id/editTextEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginTop="116dp"
                android:layout_marginEnd="32dp"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:background="@drawable/edittext_borders"
                android:hint="@string/login_correo"
                android:textSize="@dimen/login_text_size"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <EditText
                android:id="@+id/editTextPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginEnd="32dp"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:background="@drawable/edittext_borders"
                android:hint="@string/login_pass"
                android:textSize="@dimen/login_text_size"
                android:inputType="textPassword"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignUp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPasswordSignUp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.442"/>
        <EditText
                android:id="@+id/editTextConfirmPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_edit_text_height"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="32dp"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/login_edit_text_space"
                android:paddingRight="@dimen/login_edit_text_space"
                android:background="@drawable/edittext_borders"
                android:hint="@string/login_confirmar_pass"
                android:textSize="@dimen/login_text_size"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <Button android:id="@+id/buttonRegistro"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_height"
                android:text="@string/login_registro"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/login_text_xl_size"
                android:background="@drawable/button_ripple_background"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonGoBackLoginSignUp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.657"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignUp"/>

        <Button
                android:id="@+id/buttonGoBackLoginSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_xl_height"
                android:text="@string/login_volver"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/login_text_size"
                android:background="@drawable/button_ripple"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>