<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:fillViewport="true"
            tools:context=".activities.LoginActivity">


        <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <EditText
                    android:orientation="vertical"
                    android:id="@+id/editTextEmailForgotPass"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginEnd="32dp"
                    android:paddingLeft="@dimen/login_edit_text_space"
                    android:paddingRight="@dimen/login_edit_text_space"
                    android:background="@drawable/edittext_borders"
                    android:hint="@string/login_correo"
                    android:textSize="@dimen/login_text_size"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="120dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/buttonGoBackLoginForgotPass"
                    app:layout_constraintVertical_bias="0.006"/>

                <Button android:id="@+id/buttonForgotPass"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_button_height"
                        android:text="@string/login_restablecer_pass"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/login_text_xl_size"
                        android:background="@drawable/button_ripple_background"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/buttonGoBackLoginForgotPass"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintVertical_bias="0.153"
                        app:layout_constraintTop_toBottomOf="@+id/editTextEmailForgotPass"/>

                <Button
                        android:id="@+id/buttonGoBackLoginForgotPass"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_button_xl_height"
                        android:text="@string/login_volver"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="@dimen/login_text_size"
                        android:background="@drawable/button_ripple"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>


        </android.support.constraint.ConstraintLayout>

</ScrollView>